--- a/web/week03/style.css
+++ b/web/week03/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("images/wizards_workshop.jpg");
+    background-image: url("images/moroniliberty.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     font-family: Verdana, sans-serif;
