--- a/web/week05/style.css
+++ b/web/week05/style.css
@@ -1,58 +1,67 @@
 body {
-	background-color: white;
+	background-image: url("https://www.planwallpaper.com/static/images/nature_backgrounds_elegant_background_pictures_7072.jpg");
+	text-align: center;
 }
 
-div {
-	background-color: LightSkyBlue;
-	margin-left: 15%;
-	margin-right: 15%;
-	padding: 15px 20px 0px 20px;
-}
-
-ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-}
-
-li {
-	float: left;
-	padding: 0px 15px 0px 0px;
-}
-
-img {
-	float: left;
-	margin-right: 20px;
-}
-
-li a:hover {
-	background-color: DarkSeaGreen;
+h1, h2, h3, h4, p, li a {
+	color: black;
+	font-family: "Verdana";
 }
 
 h1 {
-	font-size: 36px;
+	font-size: 30px;
 }
 
-p, a {
-	font-size: 22px;
+h2 {
+	font-size: 26px;
 }
 
-h1, p {
-	font-family: Arial;
+p {
+	font-size: 20px;
 }
 
-.top {
-	height: 75px;
-	margin-top: 20px;
-	padding-top: 1px;
+div#back {
+	width: 80%;
+	margin-top: 0;
+	margin-bottom: 0;
+	background: rgba(238, 238, 238, 0.92);
+	padding: 14px;
+	height: auto;
+	display: inline-block;
+	text-align: left;
 }
 
-.nav {
-	background-color: LightSeaGreen;
-	height: 35px;
+div.separate {
+	background-color: rgb(200, 0, 0);
 }
 
-.bottom {
-	height: 500px;
+ul.nav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+	background: rgba(215, 215, 215, 0.92);
+}
+
+li.nav {
+    float: left;
+}
+
+li a.nav {
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: rgba(192, 192, 192, 0.92);
+}
+
+img {
+	float: right;
+	width: 350px;
+	margin-top: 30px;
+	margin-left: 30px;
+	clear: right;
 }
