--- a/web/week05/main.css
+++ b/web/week05/main.css
@@ -7,14 +7,14 @@ html{
 }
 
 body{
-    height: 100%;
     font-family: 'Helvetica', 'Arial', 'sans-serif';
+    height: 100%;
     font-size: 1.2em;
     padding: 0px;
     margin: 0px;
 }
 
-h1,h2{
+h1,h2,h3{
     font-family: 'Lora';
     margin: 0;
 }
@@ -48,7 +48,7 @@ ul{
     margin: 0px;
 }
 
-nav li{
+nav {
     padding: 10px;
     padding-right: 5%;
 
@@ -67,57 +67,70 @@ nav a:hover{
 
 main{
     background-color: #BFD7EA;
-    height: 100%;
     padding-top: 5%;
 }
-
-
-/*body links*/
-main a{
-    text-decoration: none;
-
+.login{
+    height: 100%;
 }
 
-main a:link{
-    color: #FF5A5F;
-}
-main a:visited{
-    color: #FF5A5F;
-}
-main a:hover{
-    text-decoration: underline;
-    color: #FF5A5F;
-}
-main a:active{
-    color: #BFD7EA;
-}
 
 /*body articles*/
 article{
-    margin: 5% 20%;
+    position: relative;
+    margin: 20px 20%;
     background-color: #ffffff;
-    padding: 7%;
+    padding: 20px;
     box-shadow: 3px 3px #999999;
 }
-img{
-    width: 100%;
-    margin: 5% auto;
-    text-align: center;
+.comment{
+    position: relative;
+    margin: 15px 15px 15px 30px;
+    background-color: #BFD7EA;
+    padding: 10px;
+    box-shadow: 3px 3px #999999;
 }
-.post-date{
-    font-size: .9em;
+.date{
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+    font-size: .75em;
     color: darkgrey;
+    padding: 5px;
 }
 
-#warning{
-    color: #ffffff;
-    font-size: 1.5em;
-    margin: 0px;
-    background-color: red;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+textarea{
+    display: block;
+    width: 60%;
+    height: 80px;
+    margin: auto;
+    font-family: 'Helvetica', 'Arial', 'sans-serif';
+
+}
+textarea.work{
+    width: 90%;
+    height: 50px;
+    margin: 15px 15px 15px 30px;
+}
+.workBtn{
+    margin-left: 5%;
 }
 
+#create{
+    margin-left: 20%;
+}
+input[type="submit"]{
+    margin-top: 10px;
+    background-color: #0B3954;
+    border: none;
+    color: #BFD7EA;
+    padding: 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    font-size: .75em;
+}
+
+.wrapper{
+    width: 200px;
+    margin: auto;
+}
 
