--- a/web/week05/social/main.css
+++ b/web/week05/social/main.css
@@ -23,14 +23,14 @@ h1,h2,h3{
 
 /*Header*/
 header{
-    background-color: #0B3954;
-    color: #BFD7EA;
+    background-color: rgb(0, 4, 253);
+    color: rgb(145, 0, 43);
     width: 100%;
     text-align: right;
     padding: 5% 0%;
 }
 header a{
-    color: #BFD7EA;
+    color: rgb(217, 255, 0);
     text-decoration: none;
 
 }
@@ -39,7 +39,7 @@ h1{
 }
 
 hr{
-    color: #BFD7EA;
+    color: rgb(1, 5, 8);
     width: 90%;
 }
 
