--- a/web/week05/style.css
+++ b/web/week05/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("https://www.planwallpaper.com/static/images/nature_backgrounds_elegant_background_pictures_7072.jpg");
+	background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWtHQW2W62BqfL0VM8WfBscAjMCQm6pGCNIYSV1P5Xdhy5X9bZdg");
 	text-align: center;
 }
 
@@ -24,7 +24,7 @@ div#back {
 	width: 80%;
 	margin-top: 0;
 	margin-bottom: 0;
-	background: rgba(238, 238, 238, 0.92);
+	background: rgba(255, 239, 95, 0.92);
 	padding: 14px;
 	height: auto;
 	display: inline-block;
